Major update to pt_BR Translation (#271)
* Added pt_BR translation for: config.yml

* Added pt_BR translation for: keys.yml

* Added: Testing

* Removed: Testing

* Added: pt_BR translation for: misc.yml

* Added pt_BR translation for: vanilla.yml

* Added pt_BR translation for: info.yml

* Added pt_BR translation for: model_editor.yml

* Added pt_BR translation for: gui.yml 46%

* Added en_US translation for: commands.yml

* Added en_US translation for: error.yml

* Added en_US translation for: success.yml

* Updated pt_BR translation for: gui.yml

* Updated pt_BR translation for: gui.yml

Added BetterLights and image strings.

* Updated: gui.yml - bb-gun strings P.1

* Updated: gui.yml - bb-gun % more strings P.2

* Updated: gui.yml P.3 Fixes & Changes

--- a/help/pt_BR/gui.yml
+++ b/help/pt_BR/gui.yml
@@ -17,7 +17,7 @@ blockbuster.gui:
     cancel: Cancelar
     select: Selecionar
     ok: Ok
-    billboard: Olhar para player
+    billboard: Olhar para o jogador
 
     # First time module
     first_time:
@@ -34,7 +34,7 @@ blockbuster.gui:
         create: Criar pose
 
         keys:
-            toggle_gui_model: Alternar renderização de modelo dentro do editor
+            toggle_gui_model: Alternar renderização do modelo dentro do editor
     
     dashboard: 
         main: Painel
@@ -142,7 +142,7 @@ blockbuster.gui:
             toggle_options: Alternar opções gerais
 
     scenes:
-        title: Scenes
+        title: Cenas
 
         add_scene: "Adicionar á cena..."
         dupe_scene: "Duplicar cena selecionada..."
@@ -395,7 +395,7 @@ blockbuster.gui:
         loop_offset: Deslocamento do loop
         loop_offset_count: Contagem do deslocamento
         end_point: Ponto final
-        end_point_tooltip: Defina o ponto final deste morph da sequência, se aleatório estiver habilitado, ele também será usado para contar loops.
+        end_point_tooltip: Defina o ponto final desse morph da sequência, se aleatório estiver habilitado, ele também será usado para contar loops.
 
         preview_tick: Preview tick of this sequencer morph
 
@@ -437,14 +437,14 @@ blockbuster.gui:
         cap: Capacidade
 
     snowstorm:
-        variables: Variables
-        expression: Mathematical expression
+        variables: Variáveis
+        expression: Expressões matemáticas
 
-        title: Particles
-        mode: Mode
-        add_modal: "Enter a name for a new blank particle effect:"
-        dupe_modal: "Enter a new name for a copy of current particle effect:"
-        remove_modal: "Are you sure you want to remove this particle effect for ever?"
+        title: Partículas
+        mode: Modo
+        add_modal: "Insira um nome para o novo efeito de partícula em branco:"
+        dupe_modal: "Insira um novo nome para a cópia do efeito de partícula atual:"
+        remove_modal: "Tem certeza de que deseja remover esse efeito de partícula para sempre?"
 
         open_tooltip: Particle effect manager
         save_tooltip: Save current particle effect
@@ -737,7 +737,7 @@ blockbuster.gui:
         #all language keys are converted to lowercase
         options:
             enabled: Habilitado
-            direction: Direction
+            direction: Direção
             directionx_tooltip: X
             directiony_tooltip: Y
             directionz_tooltip: Z
@@ -769,138 +769,138 @@ blockbuster.gui:
                 samples_tooltip: Amostras
 
     texture:
-        title: Texture manager
-        subtitle: This GUI allows you to view and manage textures loaded by Minecraft during runtime
+        title: Gerenciador de texturas
+        subtitle: Esta GUI permite visualizar e gerenciar as texturas carregadas pelo Minecraft durante o tempo que foi executado
         linear: Linear
-        linear_tooltip: When enabled, texture looks smooth
+        linear_tooltip: Quando ativado, a textura parece suave
         mipmap: Mipmap
-        mipmap_tooltip: When enabled, looks less noisy far away
-        replace: Replace
+        mipmap_tooltip: Quando ativado, parece menos pixelada à distância
+        replace: Substituir
         replace_modal: "Type in the resource location of {l}already loaded{r} texture which you want to replace with:"
-        export: Save texture
-        export_modal: "Selected texture was successfully selected as {7}%s{r}!"
-        export_error: "This texture couldn't be exported... Check the logs for the error message!"
-        open_folder: "Open export folder..."
-        copy: "Copy currently selected texture as a string (domain:path)"
+        export: Salvar textura
+        export_modal: "A textura selecionada foi selecionada com sucesso como {7}%s{r}!"
+        export_error: "Esta textura não pôde ser exportada... Verifique a mensagem de erro nos logs!"
+        open_folder: "Abrir pasta de exportação..."
+        copy: "Copiar a textura atualmente selecionada como uma string (domínio:caminho)"
 
     gun:
-        title: Gun configuration
-        fire_props: Fire properties
-        projectile_props: Projectile properties
-        impact_props: Impact properties
-        transforms: Transformations
-        transforms_first_person: Transformations (1st person)
+        title: Configuração da pistola
+        fire_props: Propriadades ao disparar
+        projectile_props: Propriadades do projétil
+        impact_props: Propridades do impacto
+        transforms: Transformações
+        transforms_first_person: Transformações (1st pessoa)
         
-        default_morph: Default morph
-        fire_morph: Firing morph
-        fire_command: Command on fire
-        delay: Delay
-        projectiles: Projectiles
-        scatter: Scatter
-        scatter_x: Horizontal scatter
-        scatter_y: Vertical scatter
-        launch: Launch player
-        ammo_stack: This option allows to specify an item, which will be consumed upon shooting. If there are no items of this kind and its count, when shooting in survival mode, then the projectile won't be shot.\n\nThink of it as an ammo option.
+        default_morph: Morph padrão
+        fire_morph: Morph ao disparar
+        fire_command: Comando ao disparar
+        delay: Atraso
+        projectiles: Projéteis
+        scatter: Dispersão
+        scatter_x: Dispersão Horizontal
+        scatter_y: Dispersão Vertical
+        launch: Lançar jogador
+        ammo_stack: Essa opção permite especificar um item que será consumido ao disparar. Se não houver itens desse tipo e sua contagem, ao atirar no modo de sobrevivência, o projétil não será disparado.\n\nPense nisso como uma opção de munição.
         
-        projectile_morph: Projectile morph
-        tick_command: Command on tick
+        projectile_morph: Morph do projétil
+        tick_command: Comando no tick
         ticking: Ticking
-        life_span: Life span
-        yaw: Yaw
-        pitch: Pitch
-        sequencer: Sequencer
-        random: Random
+        life_span: Vida útil
+        yaw: Virado
+        pitch: Tom
+        sequencer: Sequência
+        random: Randomização
         hitbox_x: Hitbox X
         hitbox_y: Hitbox Y
-        speed: Speed
-        friction: Friction
-        gravity: Gravity
-        fade_in: Fade in
-        fade_out: Fade out
+        speed: Velocidade
+        friction: Fricção
+        gravity: Gravidade
+        fade_in: Aparecimento
+        fade_out: Desaparecer
 
-        aim_options: Pro options
-        static_recoil: Static recoil
+        aim_options: Opções pro
+        static_recoil: Recuo estático
         static_recoil_tooltip:
             |
-                When enabled, the minimum X and Y recoil will be added to player's look direction every time.
+            Quando ativado, o recuo mínimo X e Y será sempre adicionado à direção do olhar do jogador.
 
-                Otherwise (when disabled) a number between minimum and maximum fields will be randomly generated and added to player's look direction.
-        recoil_x: Recoil X
-        recoil_y: Recoil Y
-        recoil_min: Minimum recoil factor
-        recoil_max: Maximum recoil factor
+                Caso contrário (quando desabilitado) um número entre os campos mínimo e máximo será gerado aleatoriamente e adicionado à direção do olhar do jogador.
+        recoil_x: Recuo X
+        recoil_y: Recuo Y
+        recoil_min: Fator mínimo de recuo
+        recoil_max: Fator máximo de recuo
 
-        arm_pose: Shooting arm pose
-        arm_shooting_pose: Enable when shooting
-        arm_shooting_pose_tooltip: When enabled and shooting BB gun, character's arms will be held in a bow shooting pose
-        arm_shooting_pose_always: Keep the pose
-        arm_shooting_pose_always_tooltip: When enabled, arms will always be held in a bow shooting pose
+        arm_pose: Pose do braço ao atirar
+        arm_shooting_pose: Habilitar ao disparar
+        arm_shooting_pose_tooltip: Quando ativado e ao disparar a pistola BB, os braços do personagem serão mantidos em uma pose de disparar
+        arm_shooting_pose_always: Manter pose
+        arm_shooting_pose_always_tooltip: Quando ativado, os braços serão sempre mantidos em uma pose de disparar
 
-        shooting_offset: Shooting offset
-        shooting_offset_tooltip: XYZ values relative to head rotation that allow you to adjust where does the projectile will be shot from
-        shooting_offset_x: Shooting offset X
-        shooting_offset_y: Shooting offset Y
-        shooting_offset_z: Shooting offset Z
+        shooting_offset: Deslocamento ao disparar
+        shooting_offset_tooltip: Valores XYZ relativos à rotação da cabeça que permitem ajustar de onde o projétil será disparado
+        shooting_offset_x: Deslocamento ao disparar X
+        shooting_offset_y: Deslocamento ao disparar Y
+        shooting_offset_z: Deslocamento ao disparar Z
 
-        inventory_morph: Inventory morph
-        crosshair_morph: Crosshair morph
-        hands_morph: Hands morph
-        reload_morph: Reloading morph
-        overlay_morph: Zoom overlay morph
+        inventory_morph: Morph do inventário
+        crosshair_morph: Morph da mira
+        hands_morph: Morph das mãos
+        reload_morph: Morph ao recarregar
+        overlay_morph: Morph da sobreposição de zoom
 
-        hide_crosshair_on_zoom: Hide on zoom
-        use_inventory_morph: Enable morph
-        hide_hands_on_zoom: Hide on zoom
-        use_zoom_overlay_morph: Enable morph
+        hide_crosshair_on_zoom: Esconder no zoom
+        use_inventory_morph: Habilitar morph
+        hide_hands_on_zoom: Esconder no zoom
+        use_zoom_overlay_morph: Habilitar morph
 
-        zoom_factor: Zoom factor
-        zoom_factor_tooltip: Arbitrary zoom factor, the higher the number, the closer it will be to {7}0{r} degrees FOV, {7}0.5{r} factor is about {7}50%%{r} of your current FOV
-        ammo: Ammo
-        ammo_tooltip: How many time can a gun get shot before needing a reloading (if reloading is enabled)
-        reloading: Reloading
-        use_reloading: Enable reloading
-        reloading_time_tooltip: How many ticks it takes to reload the gun
-        shooting: Shooting
-        shoot_when_held: Shoot when held
-        shot_delay_tooltip: Delay between shots during automatic firing (in ticks)
+        zoom_factor: Fator do zoom
+        zoom_factor_tooltip: Fator de zoom arbitrário, quanto maior o número, mais próximo estará de {7}0{r} graus do FOV, {7}0,5{r} fator é cerca de {7}50%%{r} do seu FOV atual
+        ammo: Munição
+        ammo_tooltip: Quanto tempo uma pistola pode ser disparada antes de precisar ser recarregada (se a recarga estiver habilitada)
+        reloading: Recarregar
+        use_reloading: Habilitar recarga
+        reloading_time_tooltip: Quantos ticks são necessários para recarregar a pistola
+        shooting: Disparar
+        shoot_when_held: Atire quando segurando
+        shot_delay_tooltip: Atraso entre disparos durante disparo automático (em ticks)
 
         aim_options_second: Pro options (page 2)
-        destroyed_command: Command on gun destroyed
-        melee_command: Command on melee attack
-        reload_command: Command on reload
-        zoom_on_command: Command on zoom
-        zoom_off_command: Command on zoom off
+        destroyed_command: Comando da pistola destruída
+        melee_command: Comando no ataque corpo a corpo
+        reload_command: Comando ao recarregar
+        zoom_on_command: Comando no zoom
+        zoom_off_command: Comando no zoom desligado
 
-        melee_damage: Melee damage
-        mouse_zoom: Mouse intensity on zoom
-        durability: Durability
-        prevent_left_click: Prevent block breaking
-        prevent_right_click: Prevent interaction
-        prevent_entity_attack: Prevent entity attack
+        melee_damage: Dano corpo a corpo
+        mouse_zoom: Intensidade do mouse no zoom
+        durability: Durabilidade
+        prevent_left_click: Evitar a quebra de blocos
+        prevent_right_click: Impedir interação
+        prevent_entity_attack: Prevenir ataque de entidade
 
-        impact_morph: Impact morph
-        impact_delay: Impact delay
-        impact_command: Command on impact
-        impact_entity_command: Command on entity impact
-        vanish: Vanish
-        bounce: Bounce
+        impact_morph: Morph de impacto
+        impact_delay: Atraso no impacto
+        impact_command: Comando no impacto
+        impact_entity_command: Comando no impacto da entidade
+        vanish: Desaparecer
+        bounce: Sacudir
         sticks: Sticks
-        hits: Hits
-        damage: Damage
+        hits: Batidas
+        damage: Dano
         knockback_horizontal: Horizontal knockback factor, 0 is no knockback, the higher the value the further entity will be knocked
         knockback_vertical: Vertical knockback factor, 0 is no vertical knockback, the higher the value the higher entity will be knocked. This option doesn't work if horizontal knockback is 0
-        bounce_factor: Factor
-        vanish_command: Command on vanish
-        vanish_delay: Vanish delay
+        bounce_factor: Fator
+        vanish_command: Comando ao desaparecer
+        vanish_delay: Atraso ao desaparecer
         penetration: Penetration factor - how much into the block the projectile will penetrate into (this option works only when Sticks enabled)
-        collision: Collision
-        ignore_blocks: Ignore blocks
+        collision: Colisão
+        ignore_blocks: Ignorar blocos
         ignore_blocks_tooltip: This option makes projectiles go through blocks instead of bouncing, sliding or sticking
-        ignore_entities: Ignore entities
+        ignore_entities: Ignorar entidades
         ignore_entities_tooltip: This option makes projectiles go through entities instead of causing damage, knockback or executing on entity impact command
 
-        gun_transforms: Gun transformations
-        projectile_transforms: Projectile transformations
+        gun_transforms: Transformações da pistola
+        projectile_transforms: Transformações do projétil
 
         category:
             motion: Motion
